--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,9 +50,11 @@ footer {
 }
 
 
+@media only screen and (max-width: 576px) {
 
+    .ocultar-sm {
+        display: none;
+        /* Ocultar en dispositivos pequeños */
+    }
 
-.ocultar-sm {
-    display: none;
-    /* Ocultar en dispositivos pequeños */
 }
